--- a/Proj3/index.html
+++ b/Proj3/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- <meta http-equiv="refresh" content="3;url=https://google.com" /> -->
 		<title>Rotating Navigation</title>
 		<link rel="stylesheet" href="style.css" />
 		<!-- font awesome -->
@@ -10,6 +11,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
 		/>
+		<!-- <base href="http://127.0.0.1:5500/Proj4/" /> -->
 	</head>
 	<body>
 		<div class="container">
@@ -28,18 +30,30 @@
 				<h1>Amazing Website</h1>
 				<small>Chi Zhang</small>
 				<p>
-					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur,
-					quaerat temporibus perferendis pariatur beatae officiis sunt repellat,
-					ipsa eveniet aperiam tempore provident nulla, ea obcaecati consequatur
-					ex. Officiis quibusdam omnis nulla fugit consequatur similique vel
-					facere, ipsa non quasi reiciendis voluptatum unde alias totam harum!
-					Error quis praesentium vero veniam, saepe nemo sed! Sequi unde quia
-					animi, consectetur asperiores eius nisi a non perspiciatis
-					consequuntur aperiam soluta obcaecati et qui provident suscipit
-					tempore neque quaerat facere accusamus nesciunt placeat quis
-					voluptates. Nostrum provident officiis consequuntur non temporibus
-					voluptates, culpa reprehenderit corporis ab ratione nobis numquam quas
-					repellendus molestias architecto tenetur?
+					<a href="http://google.com" target="_blank">Hello</a>
+					<span>Lorem ipsum, </span>
+					dolor sit amet consectetur adipisicing elit. Consectetur, quaerat
+					temporibus perferendis pariatur beatae officiis sunt repellat, ipsa
+					eveniet aperiam tempore provident nulla, ea obcaecati consequatur ex.
+					Officiis quibusdam omnis nulla fugit consequatur similique vel facere,
+					ipsa non quasi reiciendis
+					<br />
+					<strong
+						>voluptatum unde alias totam harum! Error quis praesentium vero
+						veniam,</strong
+					>
+					<b>
+						saepe nemo sed! Sequi unde quia animi, consectetur asperiores eius
+						nisi a non perspiciatis consequuntur aperiam soluta obcaecati et qui
+						provident suscipit tem
+					</b>
+				</p>
+				<hr />
+				<p>
+					pore neque quaerat facere accusamus nesciunt placeat quis voluptates.
+					Nostrum provident officiis consequuntur non temporibus voluptates,
+					culpa reprehenderit corporis ab ratione nobis numquam quas repellendus
+					molestias architecto tenetur?
 				</p>
 				<h3>View</h3>
 
